fix group edit form visibility alight test-connection button

--- a/OmniDB/OmniDB_app/static/OmniDB_app/scss/components/modal.scss
+++ b/OmniDB/OmniDB_app/static/OmniDB_app/scss/components/modal.scss
@@ -134,8 +134,6 @@ $modalPadding: 24px;
         }
 
         .group-edit-form {
-            display: none;
-
             &__list {
                 margin: -8px -8px;
                 .group-list {
